--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,73 +3,26 @@
     <string name="email">Mail</string>
     <string name="password">Contraseña</string>
     <string name="header">Psi Connect</string>
-    <string name="register">Registrarse</string>
+    <string name="registro">Registrarse</string>
     <string name="login">Iniciar sesion</string>
 
-    <string name="profile">Perfil</string>
-    <string name="logout">Cerrar sesion</string>
-    <string name="news">Haberler</string>
+    <string name="perfil">Perfil</string>
+    <string name="cerrar_sesion">Cerrar sesion</string>
+    <!--<string name="news">Haberler</string>-->
 
-    <string name="appointment">Turno Al</string>
-    <string name="cancel">Cancelar Et</string>
+    <string name="turnos">Turno Al</string>
+    <string name="cancelar">Cancelar</string>
 
     <string name="doctor">Profesional</string>
     <string name="patient">Paciente</string>
 s
-    <string-array name="doctor_specialties">
+    <string-array name="especialidades">
         <item>Psicología Clínica</item>
         <item>Psicología Educativa</item>s
         <item>Psicología Organizacional</item>
         <item>Psicología Social</item>
         <item>Psicología Forense</item>
-        <item>Ağız ve Diş Sağlığı</item>
-        <item>Anesteziyoloji ve Reanimasyon</item>
-        <item>Beslenme ve Diyetetik</item>
-        <item>Beyin ve Sinir Cerrahisi</item>
-        <item>Çocuk Cerrahisi</item>
-        <item>Çocuk Endokrinolojisi</item>
-        <item>Çocuk Enfeksiyon Hastalıkları</item>
-        <item>Çocuk Gastroenterolojisi</item>
-        <item>Çocuk Hematolojisi</item>
-        <item>Çocuk Kardiyolojisi</item>
-        <item>Çocuk Nefrolojisi</item>
-        <item>Çocuk Psikiyatrisi</item>
-        <item>Çocuk Sağlığı ve Hastalıkları</item>
-        <item>Çocuk Ürolojisi</item>
-        <item>Dermatoloji</item>
-        <item>Endokrinoloji ve Metabolizma Hastalıkları</item>
-        <item>Fiziksel Tıp ve Rehabilitasyon</item>
-        <item>Gastroenteroloji</item>
-        <item>Genel Cerrahi</item>
-        <item>Genetik</item>
-        <item>Göğüs Cerrahisi</item>
-        <item>Göğüs Hastalıkları</item>
-        <item>Göz Hastalıkları</item>
-        <item>Hematoloji</item>
-        <item>İç Hastalıkları (Dahiliye)</item>
-        <item>İmmünoloji</item>
-        <item>Jinekolojik Onkoloji</item>
-        <item>Kadın Hastalıkları ve Doğum</item>
-        <item>Kalp ve Damar Cerrahisi</item>
-        <item>Kardiyoloji</item>
-        <item>Kulak Burun Boğaz Hastalıkları</item>
-        <item>Mikrobiyoloji</item>
-        <item>Nefroloji</item>
-        <item>Neonatoloji</item>
-        <item>Nöroloji</item>
-        <item>Nöroşirurji</item>
-        <item>Ortopedi ve Travmatoloji</item>
-        <item>Plastik, Rekonstrüktif ve Estetik Cerrahi</item>
-        <item>Psikiyatri</item>
-        <item>Radyasyon Onkolojisi</item>
-        <item>Radyoloji</item>
-        <item>Tıbbi Biyokimya</item>
-        <item>Tıbbi Genetik</item>
-        <item>Tıbbi Mikrobiyoloji</item>
-        <item>Tıbbi Onkoloji</item>
-        <item>Tıbbi Patoloji</item>
-        <item>Tıbbi Farmakoloji</item>
-        <item>Üroloji</item>
+
     </string-array>
 
 </resources>
